@@ -51,6 +51,8 @@ This release includes the following bugfixes:
  o base64 encoding/decoding works on non-ASCII platforms
  o large file downloads
  o CURLOPT_COOKIELIST set to "ALL" crash
+ o easy handle removal from multi handle before completion
+ o TFTP upload memory leak
 
 Other curl-related news:
 
@@ -71,6 +73,7 @@ advice from friends like these:
  Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell,
  Stefan Krause, Sebastien Willemijns, Alexey Simak, Brendan Jurd,
  Robson Braga Araujo, David McCreedy, Robert Foreman, Nathanael Nerode,
- Victor Snezhko, Linus Nielsen Feltzing, Toby Peterson
+ Victor Snezhko, Linus Nielsen Feltzing, Toby Peterson, Dan Fandrich, 
+ Armel Asselin
 
         Thanks! (and sorry if I forgot to mention someone)
